--- a/Views/AttenanceRecord/Index.cshtml
+++ b/Views/AttenanceRecord/Index.cshtml
@@ -25,7 +25,7 @@
                 </div>
         }
     }
-    <div class="border border-1 border-dark p-3 att-card mb-4">
+    <div class="border border-1 border-dark p-3 att-card mb-4 shadow-lg">
         <form method="post" asp-action="Index">
             <div class="row ms-5 me-5">
                 <div class="col-4">
@@ -65,7 +65,7 @@
     <div class="container py-5">
         <div class="row justify-content-center gap-5">
             <div class="col-12 col-md-6 col-lg-4">
-                <div class="border border-1 border-dark p-3 att-card">
+                <div class="border border-1 border-dark p-3 att-card shadow">
                     <h4 class="text-center mt-2">Attenance</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
                         <form method="post" asp-action="RecordAttenance">
@@ -90,7 +90,7 @@
                 </div>
             </div>
              <div class="col-12 col-md-6 col-lg-4">
-                <div class="border border-1 border-dark p-3 att-card">
+                <div class="border border-1 border-dark p-3 att-card shadow">
                     <h4 class="text-center mt-2">Doctor</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
                         <form method="post" asp-action="RecordAttenance">
@@ -115,7 +115,7 @@
                 </div>
             </div>
              <div class="col-12 col-md-6 col-lg-4">
-                <div class="border border-1 border-dark p-3 att-card">
+                <div class="border border-1 border-dark p-3 att-card shadow">
                     <h4 class="text-center mt-2">Vacation</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
                         <form method="post" asp-action="RecordAttenance">
@@ -140,7 +140,7 @@
                 </div>
             </div>
              <div class="col-12 col-md-6 col-lg-4">
-                <div class="border border-1 border-dark p-3 att-card">
+                <div class="border border-1 border-dark p-3 att-card shadow">
                     <h4 class="text-center mt-2">Sick Leave</h4>
                     <div class="my-4 border border-dark border-1 p-3 text-center" style="border-radius: 40px; background-color: #9fcab2; max-width: 100%; overflow: hidden;">
                             <div class="d-flex flex-row gap-2 w-100">
