calculation of total workedHours

--- a/Views/Calendary/ForOneEmployee.cshtml
+++ b/Views/Calendary/ForOneEmployee.cshtml
@@ -73,7 +73,7 @@
                                     <td>@record.DoctorOut</td>
                                     <td>@(record.IsVacation ? "YES" : "NO")</td>
                                     <td>@(record.IsSickLeave ? "YES" : "NO")</td>
-                                    <td></td>
+                                    <td>@record.WorkedHours</td>
                                 </tr>
                     }
                 }
