--- a/Views/Calendary/Index.cshtml
+++ b/Views/Calendary/Index.cshtml
@@ -76,7 +76,7 @@
                                             <td>@record.DoctorOut</td>
                                             <td>@(record.IsVacation ? "YES" : "NO")</td>
                                             <td>@(record.IsSickLeave ? "YES" : "NO")</td>
-                                            <td></td> <!-- Worked hours can be calculated later -->
+                                            <td>@record.WorkedHours</td>
                                         </tr>
                         }
                     }
