--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -1,5 +1,20 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@using AttenanceSystemApp.ViewModels
+@model UserViewModel
+
+<h1 class="text-center my-5">Create a new user</h1>
+<form asp-action="Create" method="post">
+	<div asp-validation-summary="All" class="text-danger"></div>
+	<div class="form-group">
+		<label class="form-label" asp-for="Name">Name:</label>
+		<input type="text" asp-for="Name" class="form-control" />
+		<label class="form-label" asp-for="Email">Email:</label>
+		<input type="email" asp-for="Email" class="form-control" />
+		<label class="form-label" asp-for="Password">Password:</label>
+		<input type="password" asp-for="Password" class="form-control" />
+		<span asp-validation-for="Name" class="text-danger"></span>
+	</div>
+	<div class="mt-3">
+		<button type="submit" class="btn btn-warning my-2">Create</button>
+		<button type="reset" class="btn btn-danger my-2">Reset</button>
+	</div>
+</form>
