--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -4,7 +4,7 @@
 	<h1 class="my-5">Users</h1>
 	<a asp-action="Create" class="btn btn-warning mb-5 text-center">Create new user</a>
 	<div class="table-responsive">
-		<table class="table table-success table-striped">
+		<table class="table table-success table-striped shadow">
 		<thead>
 			<tr>
 				<th scope="col">User ID</th>
