small layout changes

--- a/Views/Employee/Index.cshtml
+++ b/Views/Employee/Index.cshtml
@@ -5,7 +5,7 @@
 	<h1 class="my-5">Employees</h1>
 	<a asp-action="Create" class="btn btn-warning mb-5 text-center">Create new employee</a>
 	<div class="table-responsive">
-		<table class="table table-success table-striped">
+		<table class="table table-success table-striped shadow">
 		<thead>
 			<tr>
 				<th scope="col">ID</th>
