--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -20,8 +20,8 @@
 							  <td>@role.Name</td>
 							  <td>
 								  <div class="d-flex align-items-center justify-content-center gap-2">
-									  <a class="btn btn-warning" asp-action="Edit" asp-route-id="@role.Id">Edit</a>
-									  <a class="btn btn-danger" asp-action="GetToDelete" asp-route-id="@role.Id">Delete</a>
+									  <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@role.Id">Edit</a>
+									  <a class="btn btn-danger btn-sm" asp-action="GetToDelete" asp-route-id="@role.Id">Delete</a>
 								  </div>
 							  </td>
 							  <td>@role.Id</td>
