--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,6 +26,8 @@
     <p class="ms-4 mt-3">Here you have access credentials for the roles Director, Supervisor and Worker, and you can do everything within their permissions. 
         Unfortunately, I cannot provide login credentials for the Admin role, as its permissions affect the overall functionality of the application.</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Director</span></p>
+    <p class="ms-5">User name: KarelCerveny</p>
+    <p class="ms-5">Password: karelCerveny123</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Supervisor</span></p>
     <p class="ms-4 mt-3"><span class="fw-bold">Worker</span></p>
 </div>
