applicate rolesPolicy on navbar

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -30,6 +30,8 @@
     <p class="ms-5">Password: karelCerveny123</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Supervisor</span></p>
     <p class="ms-4 mt-3"><span class="fw-bold">Worker</span></p>
+    <p class="ms-5">User name: PetrCerny</p>
+    <p class="ms-5">Password: petrCerny123</p>
 </div>
 <div class="m-5">
     <p class="fw-bold ms-2">Thank you for visiting this website.</p>
