--- a/Views/Employee/Create.cshtml
+++ b/Views/Employee/Create.cshtml
@@ -18,6 +18,14 @@
 							new { @class = "form-select" })
 				@Html.ValidationMessageFor(model => model.DepartmentId, "", new { @class = "text-danger" })
 		</div>
+		<div class="mb-3">
+			<label asp-for="UserId" class="form-label">User:</label>
+				@Html.DropDownListFor(model => model.UserId,
+							(SelectList)ViewBag.Users,
+							"-- Select user --",
+							new { @class = "form-select" })
+				@Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
+		</div>
 	</div>
 		<button type="submit" class="btn btn-warning my-2">Create</button>
 		<button type="reset" class="btn btn-danger my-2">Reset</button>
