edit employee with user

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -29,6 +29,8 @@
     <p class="ms-5">User name: KarelCerveny</p>
     <p class="ms-5">Password: karelCerveny123</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Supervisor</span></p>
+    <p class="ms-5">User name: PetrSpaleny</p>
+    <p class="ms-5">Password: petrSpaleny123</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Worker</span></p>
     <p class="ms-5">User name: PetrCerny</p>
     <p class="ms-5">Password: petrCerny123</p>
