edit layout - create card in all

--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -2,7 +2,10 @@
 
 <div class="container text-center">
 	<h1 class="my-5">Users</h1>
-	<a asp-action="Create" class="btn btn-warning mb-5 text-center">Create new user</a>
+	<div class="att-card border border-dark mb-4 shadow">
+		<h5 class="mt-4">Create new user</h5>
+		<a asp-action="Create" class="btn btn-warning mb-4 mt-2 text-center">Create</a>
+	</div>
 	<div class="table-responsive">
 		<table class="table table-success table-striped shadow">
 			<thead>
