--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -3,8 +3,11 @@
 
 <div class="container text-center">
 	<h1 class="my-5">Departmets</h1>
-	<a asp-action="Create" class="btn btn-warning mb-5 text-center">Create new department</a>
-	<table class="table table-success table-striped">
+	<div class="att-card border border-dark mb-4 shadow">
+		<h5 class="mt-4">Create new department</h5>
+		<a asp-action="Create" class="btn btn-warning mb-4 mt-2 text-center">Create</a>
+	</div>
+	<table class="table table-success table-striped shadow">
 		<thead>
 			<tr>
 				<th scope="col">ID</th>
