--- a/Views/Role/Index.cshtml
+++ b/Views/Role/Index.cshtml
@@ -3,7 +3,10 @@
 
 <div class="container text-center">
 	<h1 class="my-5">All roles</h1>
-	<a asp-action="Create" class="btn btn-warning mb-5 text-center">Create new role</a>
+	<div class="att-card border border-dark mb-4 shadow">
+		<h5 class="mt-4">Create new role</h5>
+		<a asp-action="Create" class="btn btn-warning mb-4 mt-2 text-center">Create</a>
+	</div>
 	<div class="table-responsive">
 		<table class="table table-success table-striped shadow">
 		<thead>
