--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -13,8 +13,13 @@
 		<input type="password" asp-for="Password" class="form-control" />
 		<span asp-validation-for="Name" class="text-danger"></span>
 	</div>
-	<div class="mt-3">
-		<button type="submit" class="btn btn-warning my-2">Create</button>
-		<button type="reset" class="btn btn-danger my-2">Reset</button>
+	<div class="mt-3 d-flex justify-content-between">
+		<div>
+			<button type="submit" class="btn btn-warning my-2">Create</button>
+			<button type="reset" class="btn btn-danger my-2">Reset</button>
+		</div>
+		<div>
+			<a asp-action="Index" class="btn btn-secondary text-white">Back</a>
+		</div>
 	</div>
 </form>
