--- a/Views/Department/Edit.cshtml
+++ b/Views/Department/Edit.cshtml
@@ -12,7 +12,14 @@
 		<label class="form-label" asp-for="City">City:</label>
 		<input type="text" asp-for="@Model.City" class="form-control" />
 	</div>
-	<button type="submit" class="btn btn-warning my-2">Edit</button>
-	<button type="reset" class="btn btn-danger my-2">Reset</button>
+	<div class="mt-3 d-flex justify-content-between">
+		<div>
+			<button type="submit" class="btn btn-warning">Edit</button>
+			<button type="reset" class="btn btn-danger">Reset</button>
+		</div>
+		<div>
+			<a asp-action="Index" class="btn btn-secondary text-white">Back</a>
+		</div>
+	</div>
 </form>
 </div>
