--- a/Views/Employee/Edit.cshtml
+++ b/Views/Employee/Edit.cshtml
@@ -27,7 +27,14 @@
 				@Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
 		</div>
 	</div>
-	<button type="submit" class="btn btn-warning my-2">Edit</button>
-	<button type="reset" class="btn btn-danger my-2">Reset</button>
+	<div class="mt-3 d-flex justify-content-between">
+		<div>
+			<button type="submit" class="btn btn-warning">Edit</button>
+			<button type="reset" class="btn btn-danger">Reset</button>
+		</div>
+		<div>
+			<a asp-action="Index" class="btn btn-secondary text-white">Back</a>
+		</div>
+	</div>
 </form>
 </div>
