--- a/Views/Role/Edit.cshtml
+++ b/Views/Role/Edit.cshtml
@@ -3,14 +3,12 @@
 <div class="container text-center">
     <h1 class="my-5">Edit Role</h1>
 
-    <a asp-action="Index" class="btn btn-secondary text-white mb-4">Back</a>
-
     <form method="post">
         <input type="hidden" name="roleName" value="@Model.Role.Name"/>
         <input type="hidden" name="roleId" value="@Model.Role.Id"/>
 
         <!-- Přidání uživatelů -->
-        <h2 class="my-3">Add to @Model.Role.Name</h2>
+        <h2 class="my-4">Add to @Model.Role.Name</h2>
         <div class="table-responsive">
             <table class="table table-success table-striped">
             <thead>
@@ -41,7 +39,7 @@
         </div>
 
         <!-- Odebrání uživatelů -->
-        <h2 class="my-3">Remove from @Model.Role.Name</h2>
+        <h2 class="my-4">Remove from @Model.Role.Name</h2>
         <div class="table-responsive">
             <table class="table table-success table-striped">
             <thead>
@@ -70,8 +68,14 @@
             </tbody>
         </table>
         </div>
-
-        <button type="submit" class="btn btn-warning my-4">Save</button>
+        <div class="mt-3 d-flex justify-content-between">
+            <div>
+                <button type="submit" class="btn btn-warning">Save</button>
+            </div>
+            <div>
+                <a asp-action="Index" class="btn btn-secondary text-white mb-4">Back</a>
+            </div>
+        </div>
     </form>
 </div>
 
