--- a/Views/User/Edit.cshtml
+++ b/Views/User/Edit.cshtml
@@ -14,8 +14,13 @@
 		<input type="password" name="password" class="form-control" />
 		<span asp-validation-for="UserName" class="text-danger"></span>
 	</div>
-	<div class="mt-3">
-		<button type="submit" class="btn btn-warning my-2">Update</button>
-		<button type="reset" class="btn btn-danger my-2">Reset</button>
+	<div class="mt-3 d-flex justify-content-between">
+		<div>
+			<button type="submit" class="btn btn-warning">Update</button>
+			<button type="reset" class="btn btn-danger">Reset</button>
+		</div>
+		<div>
+			<a asp-action="Index" class="btn btn-secondary text-white">Back</a>
+		</div>
 	</div>
 </form>
