edit buttons margin

--- a/Views/User/Create.cshtml
+++ b/Views/User/Create.cshtml
@@ -15,8 +15,8 @@
 	</div>
 	<div class="mt-3 d-flex justify-content-between">
 		<div>
-			<button type="submit" class="btn btn-warning my-2">Create</button>
-			<button type="reset" class="btn btn-danger my-2">Reset</button>
+			<button type="submit" class="btn btn-warning">Create</button>
+			<button type="reset" class="btn btn-danger">Reset</button>
 		</div>
 		<div>
 			<a asp-action="Index" class="btn btn-secondary text-white">Back</a>
