--- a/Views/Department/Index.cshtml
+++ b/Views/Department/Index.cshtml
@@ -32,8 +32,8 @@
 					  <td>
 						  <div class="d-flex align-items-center justify-content-center gap-2">
 							  <a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-							  <form method="post">
-								  <button type="submit" class="btn btn-danger btn-sm" asp-action="Delete" 
+							  <form method="get">
+								  <button type="submit" class="btn btn-danger btn-sm" asp-action="GetToDelete" 
 								  asp-route-id="@item.Id">Delete</button>
 							  </form>
 						  </div>
