--- a/Views/User/Index.cshtml
+++ b/Views/User/Index.cshtml
@@ -26,8 +26,8 @@
 							<td>
 								<div class="d-flex align-items-center justify-content-center gap-2">
 									<a class="btn btn-warning btn-sm" asp-action="Edit" asp-route-id="@item.Id">Edit</a>
-									<form method="post">
-										<button type="submit" class="btn btn-danger btn-sm" asp-action="Delete" asp-route-id="@item.Id">Delete</button>
+									<form method="get">
+										<button type="submit" class="btn btn-danger btn-sm" asp-action="GetToDelete" asp-route-id="@item.Id">Delete</button>
 									</form>
 								</div>
 							</td>
