--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
 <div class="m-5">
     <h5 class="m-2">2. Roles</h5>
     <p class="ms-4 mt-3"><span class="fw-bold">Admin</span> - Can do everything including the management roles and users</p>
-    <p class="ms-4 mt-3"><span class="fw-bold">Director</span> - Can see everything and manage the attendance of all employees from all departments.</p>
+    <p class="ms-4 mt-3"><span class="fw-bold">Director</span> - Can view everything and has all permissions without deleting, managing roles and edit users.</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Supervisor</span> - Can see all departments but cannot see employees from other departments except their own. 
         Can view and manage attendance only for employees within their own department.</p>
     <p class="ms-4 mt-3"><span class="fw-bold">Worker</span> - Can only view and record their own attendance and does not have editing rights.</p>
