--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,7 +3,7 @@
 }
 
 <div class="text-center m-5">
-    <h1 class="m-3">Welcome to attenance system app</h1>
+    <h1 class="m-3">Welcome to attendance system app</h1>
     <h4>Created by ASP.NET Core MVC</h4>
 </div>
 <div class="m-5">
