--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - AttenanceSystemApp</title>
+    <title>@ViewData["Title"] - AttendanceSystemApp</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/AttenanceSystemApp.styles.css" asp-append-version="true" />
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-success bg-opacity-25 border-bottom box-shadow mb-3">
             <div class="container-fluid">
-                <a class="navbar-brand ms-5 me-5" asp-area="" asp-controller="Home" asp-action="Index">Attenance System</a>
+                <a class="navbar-brand ms-5 me-5" asp-area="" asp-controller="Home" asp-action="Index">Attendance System</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
